manifests/netpol/db-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-ingress
  namespace: qoves-app
spec:
  podSelector:
    matchExpressions:
      - key: cnpg.io/cluster
        operator: Exists
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: qoves-api
        - podSelector:
            matchExpressions:
              - key: cnpg.io/cluster
                operator: Exists
      ports:
        - port: 5432
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
        - podSelector:
            matchExpressions:
              - key: cnpg.io/cluster
                operator: Exists
      ports:
        - port: 8000
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - port: 9187
          protocol: TCP
